--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "postcss": "^8.1.9",
     "sass": "^1.29.0",
     "sass-loader": "^10.1.0",
+    "tailwindcss": "^2.0.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -35,6 +38,11 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
